--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -76,8 +76,9 @@
                                     <!--
                                     <li><a href="#">Action</a></li>
                                     <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li> -->
+                                    -->
+                                    <li><a href="[% url.page %]/account/graph">Graphs</a></li>
+                                    <li class="divider"></li>
                                     <li><a href="[% url.page %]/login?logout">Logout</a></li>
                                 </ul>
                                 </li>
