--- a/views/graph.tt
+++ b/views/graph.tt
@@ -72,6 +72,11 @@
                         <input type="checkbox" name="stackseries" value="1" [% IF edititem.stackseries %]checked[% END %]>Stack data within same series
                     </label>
                 </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" name="addgraphusers" value="1">Add graph to all users (one-off select)
+                    </label>
+                </div>
             </div>
         </div>
         <div class="col-md-6">
