Add help text to personal graphs page

--- a/views/account.tt
+++ b/views/account.tt
@@ -1,17 +1,23 @@
 <h2>Graphs</h2>
-<form role="form" method="post">
-    <div class="row">
-        <div class="col-md-6">
-            [% FOREACH graph IN data.graphs %]
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="graphs" value="[% graph.id %]"
-                            [% IF graph.selected %]checked[% END %]
-                        >[% graph.title %]
-                    </label>
+<div class="row">
+    <div class="col-md-6">
+        <p>Use this page to configure what graphs are displayed on your home page. New
+        graphs can only be added by an administrator.</p>
+        <form role="form" method="post">
+            <div class="row">
+                <div class="col-md-6">
+                    [% FOREACH graph IN data.graphs %]
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" name="graphs" value="[% graph.id %]"
+                                    [% IF graph.selected %]checked[% END %]
+                                >[% graph.title %]
+                            </label>
+                        </div>
+                    [% END %]
                 </div>
-            [% END %]
-        </div>
+            </div>
+            <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
+        </form>
     </div>
-    <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
-</form>
+</div>
