--- a/views/layout.tt
+++ b/views/layout.tt
@@ -143,6 +143,9 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
 [% ELSE %]
+<p>The layout defines the fields that form the overall dataset. Use this page to add, delete
+and edit fields. Each field's permissions can be individually defined; full details of the
+available permissions are detailed in the <a href="[% url.page %]/user/">Users menu</a>.</p>
 <p>
     <a href="/layout/0" class="btn btn-default" role="button">Create item</a>
 </p>
