Only allow admins to send messages

--- a/views/data.tt
+++ b/views/data.tt
@@ -48,7 +48,7 @@
         [% peopcols = [] %]
         [% FOREACH col IN columns %]
             <th>[% col.name %]
-                [% IF col.type == "person" %]
+                [% IF col.type == "person" AND user.permissions.admin %]
                     [% peopfield = "field" _ col.id %]
                     [% peopcols.push(peopfield) %]
                     <a href="" data-toggle="modal" data-target="#peopcol[% peopfield %]">
