Remove value calculations from edit template

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -34,13 +34,7 @@
                 [% IF approves %]
                     [% oldvalue = record.record.$field.value %]
                 [% END %]
-                [% IF record.$field.value.id %]
-                    [% value = record.$field.value.id %]
-                [% ELSIF record.$field.value.ymd %]
-                    [% value = record.$field.value.ymd %]
-                [% ELSE %]
-                    [% value = record.$field.value %]
-                [% END %]
+                [% value = form_value(col, record) %]
                 [% IF record.current AND col.readonly AND NOT user.permissions.update_noneed_approval AND NOT user.permissions.approver %]
                     [% readonly = "readonly" %]
                 [% ELSE %]
