--- a/views/login.tt
+++ b/views/login.tt
@@ -1,25 +1,13 @@
 <div class="container">
-    [% IF reset %]
-        <div class="row" style="margin-top:20px">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <form role="form" method="post">
-                    <fieldset>
-                        <h2>Reset password</h2>
-                        <hr>
-                        <div class="form-group">
-                            <input type="password" name="password" id="password" class="form-control input-lg" placeholder="New password">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" name="password2" id="password2" class="form-control input-lg" placeholder="Confirm password">
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <input type="submit" class="btn btn-lg btn-success btn-block" value="Reset">
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
+    [% IF password %]
+        <div class="jumbotron">
+            <h1>Welcome!</h1>
+            <p>
+                Thank you for visiting the SCAP. Your password has now been set as follows.
+                Please make a secure note of this password now, as it will not be displayed again.
+            </p>
+            <h3 class="text-center">[% password %]</h3>
+            <p class="text-right"><a class="btn btn-primary btn-lg" href="[% url.page %]/login" role="button">Login</a></p>
         </div>
     [% ELSE %]
         <div class="row" style="margin-top:20px">
